--- a/TPAngularFinal/src/app/components/listado-estudiantes/listado-estudiantes.component.html
+++ b/TPAngularFinal/src/app/components/listado-estudiantes/listado-estudiantes.component.html
@@ -20,21 +20,39 @@
             <td><button (click)="borrar(estudiante.id)">Borrar</button></td>
         </tr>
     </tbody>
-    <tfoot>
-        <tr>
-            <th></th>
-            <th><input [(ngModel)]="dni"></th>
-            <th><input [(ngModel)]="apellido"></th>
-            <th><input [(ngModel)]="nombre"></th>
-            <th><input [(ngModel)]="email"></th>
-            <th colspan="2"><button (click)="agregar()">Agregar</button></th>
-        </tr>
-    </tfoot>
 </table>
+
+<form [formGroup]="estudianteForm" style="border: 1px solid;">
+    <input type="number -spinner" style="margin-top: 3%;" class="form-control" formControlName="dni" placeholder="Ingrese el DNI">
+        <span *ngIf="this.estudianteForm.get('dni')?.errors?.['required'] && this.estudianteForm.get('dni')?.touched" style="color: red">
+            (El nombre no puede quedar vacío)
+        </span>
+        <span *ngIf="this.estudianteForm.get('dni')?.errors?.['pattern']" style="color: red">
+            (DNI inválido)
+        </span>
+    <input type="text" class="form-control" formControlName="apellido" placeholder="Ingrese el apellido">
+        <span *ngIf="this.estudianteForm.get('apellido')?.errors?.['required'] && this.estudianteForm.get('apellido')?.touched" style="color: red">
+            (El nombre no puede quedar vacío)
+        </span>
+    <input type="text" class="form-control" formControlName="nombre" placeholder="Ingrese el nombre">
+        <span *ngIf="this.estudianteForm.get('nombre')?.errors?.['required'] && this.estudianteForm.get('nombre')?.touched" style="color: red">
+            (El nombre no puede quedar vacío)
+        </span>
+    <input type="email" class="form-control" formControlName="email" placeholder="Ingrese el email">    
+        <span *ngIf="this.estudianteForm.get('email')?.errors?.['required'] && this.estudianteForm.get('email')?.touched" style="color: red">
+            (El nombre no puede quedar vacío)
+        </span>
+        <span *ngIf="this.estudianteForm.get('email')?.errors?.['email']" style="color: red">
+            (Email inválido)
+        </span>
+        <div style="text-align: center" style="margin-top: 5%; margin-bottom: 3%; margin-left: 32%;"><button class="btn btn-primary btn-sm" (click)="agregar()" [disabled]="!estudianteForm.valid">Agregar</button></div>
+</form>
+
+
 <ng-template #ver let-modal>
     <div class="modal-header">
-
-    </div>
+        <h5 class="modal-title">Datos estudiante</h5>
+        <button class="close" aria-label="Close" (click)="modal.dismiss()"><span aria-hidden="true">&times;</span></button>    </div>
     <div class="modal-body">
         <label>Id:</label>
         <input class="form-control" [(ngModel)]="id2" readonly>
