--- a/TPAngularFinal/src/app/components/listado-estudiantes/listado-estudiantes.component.html
+++ b/TPAngularFinal/src/app/components/listado-estudiantes/listado-estudiantes.component.html
@@ -16,8 +16,8 @@
             <td>{{estudiante.lastName}}</td>
             <td>{{estudiante.firstName}}</td>
             <td>{{estudiante.email}}</td>
-            <td><button (click)="vista(ver, estudiante)">Ver</button></td>
-            <td><button (click)="borrar(estudiante.id)">Borrar</button></td>
+            <td><button class="btn btn-success btn-sm" (click)="vista(ver, estudiante)">Ver</button></td>
+            <td><button class="btn btn-danger btn-sm" (click)="borrar(estudiante.id)">Borrar</button></td>
         </tr>
     </tbody>
 </table>
