--- a/TPAngularFinal/src/app/components/listado-estudiantes/listado-estudiantes.component.html
+++ b/TPAngularFinal/src/app/components/listado-estudiantes/listado-estudiantes.component.html
@@ -25,22 +25,22 @@
 <form [formGroup]="estudianteForm" style="border: 1px solid;">
     <input type="number -spinner" style="margin-top: 3%;" class="form-control" formControlName="dni" placeholder="Ingrese el DNI">
     <span *ngIf="this.estudianteForm.get('dni')?.errors?.['required'] && this.estudianteForm.get('dni')?.touched" style="color: red">
-        (El nombre no puede quedar vacío)
+        (El campo no puede quedar vacío)
     </span>
     <span *ngIf="this.estudianteForm.get('dni')?.errors?.['pattern']" style="color: red">
         (DNI inválido)
     </span>
     <input type="text" class="form-control" formControlName="apellido" placeholder="Ingrese el apellido">
     <span *ngIf="this.estudianteForm.get('apellido')?.errors?.['required'] && this.estudianteForm.get('apellido')?.touched" style="color: red">
-        (El nombre no puede quedar vacío)
+        (El campo no puede quedar vacío)
     </span>
     <input type="text" class="form-control" formControlName="nombre" placeholder="Ingrese el nombre">
     <span *ngIf="this.estudianteForm.get('nombre')?.errors?.['required'] && this.estudianteForm.get('nombre')?.touched" style="color: red">
-        (El nombre no puede quedar vacío)
+        (El campo no puede quedar vacío)
     </span>
     <input type="email" class="form-control" formControlName="email" placeholder="Ingrese el email">    
     <span *ngIf="this.estudianteForm.get('email')?.errors?.['required'] && this.estudianteForm.get('email')?.touched" style="color: red">
-        (El nombre no puede quedar vacío)
+        (El campo no puede quedar vacío)
     </span>
     <span *ngIf="this.estudianteForm.get('email')?.errors?.['email']" style="color: red">
         (Email inválido)
@@ -53,19 +53,37 @@
     <div class="modal-header">
         <h5 class="modal-title">Datos estudiante</h5>
         <button class="close" aria-label="Close" (click)="modal.dismiss()"><span aria-hidden="true">&times;</span></button>    </div>
-    <div class="modal-body">
+    <div class="modal-body" [formGroup]="modalForm">
         <label>Id:</label>
         <input class="form-control" [(ngModel)]="id2" readonly>
         <label>Dni:</label>
-        <input class="form-control" [(ngModel)]="dni2" ngbAutofocus>
+        <input class="form-control" formControlName="dni2" ngbAutofocus>
+        <span *ngIf="this.modalForm.get('dni2')?.errors?.['required'] && this.modalForm.get('dni2')?.touched" style="color: red">
+            (El nombre no puede quedar vacío)
+        </span>
+        <span *ngIf="this.modalForm.get('dni2')?.errors?.['pattern']" style="color: red">
+            (DNI inválido)
+        </span>
         <label>Apellido:</label>
-        <input class="form-control" [(ngModel)]="apellido2">
+        <input class="form-control" formControlName="apellido2">
+        <span *ngIf="this.modalForm.get('apellido2')?.errors?.['required'] && this.modalForm.get('apellido2')?.touched" style="color: red">
+            (El nombre no puede quedar vacío)
+        </span>
         <label>Nombre:</label>
-        <input class="form-control" [(ngModel)]="nombre2">
+        <input class="form-control" formControlName="nombre2">
+        <span *ngIf="this.modalForm.get('nombre2')?.errors?.['required'] && this.modalForm.get('nombre2')?.touched" style="color: red">
+            (El nombre no puede quedar vacío)
+        </span>
         <label>Email:</label>
-        <input class="form-control" [(ngModel)]="email2">
+        <input class="form-control" formControlName="email2">
+        <span *ngIf="this.modalForm.get('email2')?.errors?.['required'] && this.modalForm.get('email2')?.touched" style="color: red">
+            (El nombre no puede quedar vacío)
+        </span>
+        <span *ngIf="this.modalForm.get('email2')?.errors?.['email']" style="color: red">
+            (Email inválido)
+        </span>
     </div>
     <div class="modal-footer">
-        <button class="btn btn-primary" (click)="modal.close()">Actualizar</button>
+        <button class="btn btn-primary" [disabled]="!modalForm.valid" (click)="modal.close()">Actualizar</button>
     </div>
 </ng-template>
