--- a/TPAngularFinal/src/app/components/listado-estudiantes/listado-estudiantes.component.html
+++ b/TPAngularFinal/src/app/components/listado-estudiantes/listado-estudiantes.component.html
@@ -55,7 +55,7 @@
         <button class="close" aria-label="Close" (click)="modal.dismiss()"><span aria-hidden="true">&times;</span></button>    </div>
     <div class="modal-body" [formGroup]="modalForm">
         <label>Id:</label>
-        <input class="form-control" [(ngModel)]="id2" readonly>
+        <input class="form-control" formControlName="id2" readonly>
         <label>Dni:</label>
         <input class="form-control" formControlName="dni2" ngbAutofocus>
         <span *ngIf="this.modalForm.get('dni2')?.errors?.['required'] && this.modalForm.get('dni2')?.touched" style="color: red">
@@ -63,17 +63,17 @@
         </span>
         <span *ngIf="this.modalForm.get('dni2')?.errors?.['pattern']" style="color: red">
             (DNI inválido)
-        </span>
+        </span><br>
         <label>Apellido:</label>
         <input class="form-control" formControlName="apellido2">
         <span *ngIf="this.modalForm.get('apellido2')?.errors?.['required'] && this.modalForm.get('apellido2')?.touched" style="color: red">
             (El nombre no puede quedar vacío)
-        </span>
+        </span><br>
         <label>Nombre:</label>
         <input class="form-control" formControlName="nombre2">
         <span *ngIf="this.modalForm.get('nombre2')?.errors?.['required'] && this.modalForm.get('nombre2')?.touched" style="color: red">
             (El nombre no puede quedar vacío)
-        </span>
+        </span><br>
         <label>Email:</label>
         <input class="form-control" formControlName="email2">
         <span *ngIf="this.modalForm.get('email2')?.errors?.['required'] && this.modalForm.get('email2')?.touched" style="color: red">
