--- a/TPAngularFinal/src/app/components/listado-estudiantes/listado-estudiantes.component.html
+++ b/TPAngularFinal/src/app/components/listado-estudiantes/listado-estudiantes.component.html
@@ -1,5 +1,5 @@
-<table>
-    <thead>
+<table class="table table-striped table-dark">
+    <thead class="thead bg-primary text-white">
         <tr>
             <th>Id</th>
             <th>Dni</th>
@@ -22,7 +22,7 @@
     </tbody>
 </table>
 
-<form [formGroup]="estudianteForm" style="border: 1px solid;">
+<form [formGroup]="estudianteForm" style="border: 1px solid; text-align: center;">
     <input type="number -spinner" style="margin-top: 3%;" class="form-control" formControlName="dni" placeholder="Ingrese el DNI">
     <span *ngIf="this.estudianteForm.get('dni')?.errors?.['required'] && this.estudianteForm.get('dni')?.touched" style="color: red">
         (El campo no puede quedar vacío)
@@ -45,7 +45,7 @@
     <span *ngIf="this.estudianteForm.get('email')?.errors?.['email']" style="color: red">
         (Email inválido)
     </span>
-    <div style="text-align: center" style="margin-top: 5%; margin-bottom: 3%; margin-left: 32%;"><button class="btn btn-primary btn-sm" (click)="agregar()" [disabled]="!estudianteForm.valid">Agregar</button></div>
+    <div style="text-align: center" style="text-align: center;"><button class="btn btn-primary btn-sm" (click)="agregar()" [disabled]="!estudianteForm.valid">Agregar</button></div>
 </form>
 
 
@@ -66,6 +66,6 @@
         <input class="form-control" [(ngModel)]="email2">
     </div>
     <div class="modal-footer">
-        <button class="btn btn-primary" (click)="modal.close()">Actualizar</button>
+        <button class="btn btn-primary" style="margin-right: auto; margin-left: auto;" (click)="modal.close()">Actualizar</button>
     </div>
 </ng-template>
