Add Eliminar button

--- a/TPAngularFinal/src/app/components/listado-estudiantes/listado-estudiantes.component.html
+++ b/TPAngularFinal/src/app/components/listado-estudiantes/listado-estudiantes.component.html
@@ -66,6 +66,7 @@
         <input class="form-control" [(ngModel)]="email2">
     </div>
     <div class="modal-footer">
+        <button class="btn btn-primary" style="margin-right: auto; margin-left: auto;" (click)="borrar(id2)">Eliminar</button>
         <button class="btn btn-primary" style="margin-right: auto; margin-left: auto;" (click)="modal.close()">Actualizar</button>
     </div>
 </ng-template>
